--- a/devWebI/aula/estilos.css
+++ b/devWebI/aula/estilos.css
@@ -2,7 +2,7 @@
     font-family: Verdana;
 }
 body {
-    background-color: darkolivegreen;
+    background-color: rgb(242, 244, 239);
     background-image: none;
     font-family: Arial, sans-serif;
 }
