--- a/devWebI/aula/exercicio-fixacao/exercicio1/style.css
+++ b/devWebI/aula/exercicio-fixacao/exercicio1/style.css
@@ -31,3 +31,11 @@ a {
 ul li::marker {
     color: red;
 }
+
+footer {
+    background-color: #f0f0f0;
+    padding: 10px;
+    text-align: center;
+    font-size: 0.8em;
+    color: #000;
+}
