Adiciona conteúdo aos itens no HTML e atualiza o estado do subprojeto para indicar alterações não confirmadas

--- a/devWebI/aula/flexbox/style.css
+++ b/devWebI/aula/flexbox/style.css
@@ -7,6 +7,24 @@ body{
 }
 
 .container{
+    border: 2px solid rgb(217, 17, 17);
     display: flex;
 }
 
+
+.item{
+    width: 100px;
+    height: 100px;
+    color: white;
+}
+
+.item1{
+    background-color: red;
+}
+
+.item2{
+    background-color: blue;
+}
+.item3{
+    background-color: green;
+}
